docs/5.6/modules/en/pages/harbor.adoc
= Harbor Pluggable Scanner Module
:description: Configure the Harbor Pluggable Scanner Module to scan Harbor registries using the registry adapter and controller
:revdate: 2024-09-27
:page-revdate: {revdate}
:page-opendocs-origin: /06.scanning/02.registry/01.harbor/01.harbor.md
:page-opendocs-slug:  /scanning/registry/harbor

[#_scanning_harbor_registries_using_the_pluggable_scanner]
== Scanning Harbor Registries Using the Pluggable Scanner

{product-name} supports invoking the {product-name} scanner from Harbor registries through the https://github.com/goharbor/pluggable-scanner-spec[pluggable scanner] interface. This requires configuration of the connection to the controller (exposed API). The Harbor adapter calls controller endpoint to trigger a scan, which can scan automatically on push. Interrogation services can be used for periodic scans. Scan results from Federation Primary controllers ARE propagated to remote clusters.

[NOTE]
====
There is an issue with the HTTPS based adapter endpoint error: please ignore Test Connection error, it does work even though an error is shown (skip certificate validation).
====


[#_deploying_the_product_registry_adapter]
=== Deploying the {product-name} Registry Adapter

The 5.2 Helm chart contains options to deploy the https://github.com/neuvector/neuvector-helm/blob/master/charts/core/templates/registry-adapter.yaml[registry adapter] for Harbor. It can also be pulled manually from the neuvector/registry-adapter repo on Docker Hub. Options also include setting the Harbor registry request protocol and the basic authentication secret name.

After deployment of the adapter, it is necessary to configure this in Harbor.

image:5_2_adapter_configuration.png[Harbor]

The adapter endpoint must be entered, and the adapter connects to the controller, which is typically exposed as a service externally so the adapter can connect to it. In addition, authentication credentials set through cve.adapter.harbor.secretName could be entered.
If you set cve.adapter.harbor.secretName in your Helm values:
It sets the HARBOR_BASIC_AUTH_USERNAME and HARBOR_BASIC_AUTH_PASSWORD environment variables inside the adapter pod.
The adapter will now act as a gatekeeper. When Harbor sends a request, the adapter will check the credentials against this secret first.

[#_scanning_images_from_a_harbor_registry]
=== Scanning Images from a Harbor Registry

After successful deployment and connection to a controller, an image scan can be manually or automatically triggered from Harbor.

image:2_Scan_image.png[Harbor]

Periodic scans (scheduled) can be configured through Interrogation Services in Harbor, to make sure the latest CVE database is used to rescan images in registries.

image:4_interrogation.png[Harbor]

Scan results can be viewed directly in Harbor.

image:3_scanresults.png[results]

[#_sample_deployment_yaml]
=== Sample Deployment Yaml

Samples for https://raw.githubusercontent.com/neuvector/manifests/main/kubernetes/5.3.0/neuvector-registry-adapter-k8s.yaml[Kubernetes] and https://raw.githubusercontent.com/neuvector/manifests/main/kubernetes/5.3.0/neuvector-registry-adapter-oc.yaml[OpenShift]
